Attempt to move to MinIO for CDN uploading

--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -46,21 +46,21 @@ jobs:
       with:
         rclone_config: |
           [ponyplace]
-          type = azureblob
+          type = minio
           env_auth = true
-          account = ponyplace
+          region = us-east-1
         disable_base64: true
 
     # creds will expire around 2024-06-16
-    - name: Azure login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.PONYPLACE_BLOB_CREDS }}
+    #- name: Azure login
+    #  uses: azure/login@v1
+    #  with:
+    #    creds: ${{ secrets.PONYPLACE_BLOB_CREDS }}
     
     - name: Upload to blob storage
       run: |
-        rclone -c copy ./dist "ponyplace:\$web"
+        rclone -c copy ./dist "ponyplace:ponyplace"
     
-    - name: Azure logout
-      run: az logout
-      if: always()
+    #- name: Azure logout
+    #  run: az logout
+    #  if: always()
