--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -59,7 +59,7 @@ jobs:
     
     - name: Upload to blob storage
       run: |
-        rclone -c copy ./dist "ponyplace:ponyplace"
+        rclone -c copy ./dist "minio:ponyplace"
     
     #- name: Azure logout
     #  run: az logout
