--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -45,8 +45,9 @@ jobs:
       uses: AnimMouse/setup-rclone@v1
       with:
         rclone_config: |
-          [ponyplace]
-          type = minio
+          [minio]
+          type = s3
+          provider = Minio
           env_auth = true
           region = us-east-1
         disable_base64: true
