--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -63,7 +63,7 @@ jobs:
     
     - name: Upload to blob storage
       run: |
-        rclone -c copy ./dist "minio:ponyplace"
+        rclone -c copy ./dist "minio:cdn"
     
     #- name: Azure logout
     #  run: az logout
