--- a/.github/workflows/build-and-upload-templates.yml
+++ b/.github/workflows/build-and-upload-templates.yml
@@ -95,7 +95,7 @@ jobs:
 
     - name: Upload to blob storage
       run: |
-        rclone -c copy ./dist "minio:ponyplace"
+        rclone -c copy ./dist "minio:cdn"
 
     #- name: Azure logout
     #  run: az logout
