--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -41,6 +41,9 @@ jobs:
         path: |
           dist
 
+    - name: Update certificates
+      run: ca-certificates && update-ca-certificates 2>/dev/null || true
+
     - name: Setup rclone
       uses: AnimMouse/setup-rclone@v1
       with:
