--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -42,7 +42,7 @@ jobs:
           dist
 
     - name: Update certificates
-      run: update-ca-certificates 2>/dev/null || true
+      run: update-ca-certificates
 
     - name: Setup rclone
       uses: AnimMouse/setup-rclone@v1
