--- a/.github/workflows/build-and-upload-extension.yml
+++ b/.github/workflows/build-and-upload-extension.yml
@@ -42,7 +42,7 @@ jobs:
           dist
 
     - name: Update certificates
-      run: sudo update-ca-certificates
+      run: sudo update-ca-certificates --fresh
 
     - name: Setup rclone
       uses: AnimMouse/setup-rclone@v1
